# simplicity

./: .gitignore  README.md
backend/: app.py  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: page.tsx
