[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["harsehajx <harsehaj@unc.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
openai = "^1.54.3"
serpapi = "^0.1.5"
fastapi = {extras = ["standard"], version = "^0.115.5"}
bs4 = "^0.0.2"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
